# obsidian_crawler

./: .gitignore  README.md  pyproject.toml
src/obsidian_crawler/: __init__.py  block.py  link.py  note.py  parsers.py  query.py  vault.py
tests/: test_link.py  test_note.py
