[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-crawler"
version = "0.1.0"
description = "A lightweight Python library for reading, querying and writing Obsidian vaults."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Evandro Bernardes"}
]

dependencies = [
    "PyYAML>=6.0"
]

keywords = [
    "obsidian",
    "markdown",
    "yaml",
    "knowledge-base",
    "notes"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
